--- a/Telco_CustChurn.ipynb
+++ b/Telco_CustChurn.ipynb
@@ -28,7 +28,7 @@
     "2. Mengidentifikasi faktor penyebab *churn* untuk merancang strategi retensi yang efektif.\n",
     "3. Menggunakan anggaran retensi secara tepat untuk mengurangi potensi kehilangan pelanggan.\n",
     "\n",
-    "## **Strategi *Customer Retention* **\n",
+    "## **Strategi *Customer Retention* / Retensi Pelanggan**\n",
     "Perusahaan secara rutin mengalokasikan anggaran bulanan untuk *customer retention*. Pendekatan ini melibatkan:\n",
     "- Analisis data pelanggan untuk memprediksi kemungkinan *churn*.\n",
     "- Penerapan model pembelajaran mesin (*machine learning*) untuk mengidentifikasi pelanggan berisiko tinggi.\n",
@@ -1602,14 +1602,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Data Analysis**"
+    "## **Data Analisis**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Categorical Data**"
+    "**Data Kategorikal**"
    ]
   },
   {
@@ -1706,7 +1706,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Numerical Data**"
+    "**Data Numerikal**"
    ]
   },
   {
@@ -3487,7 +3487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Balancing Method**"
+    "## **Metode Balancing**"
    ]
   },
   {
@@ -4080,7 +4080,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Test Data After Hyperparameter Tuning**"
+    "## **Test Data Setelah Hyperparameter Tuning**"
    ]
   },
   {
@@ -4101,7 +4101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **1. Test Data for Logistic Regression**"
+    "### **1. Test Data untuk Logistic Regression**"
    ]
   },
   {
@@ -4217,7 +4217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **2. Test Data for KNN (K-Nearest Neighbors)**"
+    "### **2. Test Data untuk KNN (K-Nearest Neighbors)**"
    ]
   },
   {
@@ -4326,7 +4326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **3. Test Data for Random Forest**"
+    "### **3. Test Data untuk Random Forest**"
    ]
   },
   {
@@ -4665,7 +4665,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Conclusion**"
+    "## **Kesimpulan**"
    ]
   },
   {
